--- a/Notebook/Jupyter/path/PlaiceDRL1.ipynb
+++ b/Notebook/Jupyter/path/PlaiceDRL1.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# o'reillyのツノガレイ強化学習の本\n",
     "\n",
-    "## バンディット問題\n",
+    "## 多腕バンディット問題、動的計画法\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
@@ -292,8 +292,8 @@
     "\n",
     "    def update(self, action, reward):\n",
     "        self.ns[action] += 1 # 台毎のカウンタをインクリメント\n",
-    "        self.Qs[action] += (reward - self.Qs[action]) / self.ns[action]\n",
-    "\n",
+    "        self.Qs[action] = self.Qs[action] + (1 / self.ns[action]) * (reward - self.Qs[action])\n",
+    "        \n",
     "    def get_action(self):\n",
     "        if np.random.rand() < self.epsilon:\n",
     "            return np.random.randint(0, len(self.Qs))\n",
@@ -574,7 +574,7 @@
     "        self.alpha = alpha\n",
     "\n",
     "    def update(self, action, reward):\n",
-    "        self.Qs[action] += (reward - self.Qs[action]) * self.alpha\n",
+    "        self.Qs[action] = self.Qs[action] + self.alpha  * (reward - self.Qs[action])\n",
     "\n",
     "    def get_action(self):\n",
     "        if np.random.rand() < self.epsilon:\n",
@@ -816,8 +816,9 @@
     "        new_V = 0\n",
     "        for action, action_prob in action_probs.items():\n",
     "            next_state = env.next_state(state, action)\n",
-    "            r = env.reward(state, action, next_state)\n",
-    "            new_V += action_prob * (r + gamma * V[next_state])\n",
+    "            reward = env.reward(state, action, next_state)\n",
+    "            # 報酬や状態遷移確率は=1なので表記されていない。\n",
+    "            new_V += action_prob * (reward + gamma * V[next_state])\n",
     "            \n",
     "        # 新しい状態価値関数\n",
     "        V[state] = new_V\n",
@@ -997,8 +998,9 @@
     "        action_values = []\n",
     "        for action in env.actions():\n",
     "            next_state = env.next_state(state, action)\n",
-    "            r = env.reward(state, action, next_state)\n",
-    "            value = r + gamma * V[next_state]\n",
+    "            reward = env.reward(state, action, next_state)\n",
+    "            # 報酬や状態遷移確率は=1なので表記されていない。\n",
+    "            value = reward + gamma * V[next_state]\n",
     "            action_values.append(value)\n",
     "\n",
     "        # 新しい状態価値関数\n",
