--- a/Notebook/Jupyter/path/PlaiceDRL2.ipynb
+++ b/Notebook/Jupyter/path/PlaiceDRL2.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# o'reillyのツノガレイ強化学習の本\n",
     "\n",
-    "## バンディット問題\n",
+    "## GPIの手法：モンテカルロ法、TD法\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
     "- [環境準備](#環境準備)\n",
@@ -274,11 +274,12 @@
     "            # 方策評価\n",
     "            \n",
     "            # ココがインクリメンタルな収益の計算\n",
-    "            G = self.gamma * G + reward\n",
+    "            G = reward + self.gamma * G\n",
     "            \n",
     "            # ココは効率の良い状態価値関数の更新の実装\n",
     "            self.cnts[state] += 1 # カウンタ\n",
-    "            self.V[state] += (G - self.V[state]) / self.cnts[state]"
+    "            # エピソード毎の状態毎の収益は、履歴の最新の計算結果を利用して計算していく。\n",
+    "            self.V[state] = self.V[state] + (1 / self.cnts[state]) * (G - self.V[state])"
    ]
   },
   {
@@ -309,7 +310,7 @@
     "    state = env.reset()\n",
     "    agent.reset()\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -401,12 +402,12 @@
     "            # 方策評価\n",
     "            \n",
     "            # ココがインクリメンタルな収益の計算\n",
-    "            G = self.gamma * G + reward\n",
+    "            G = reward + self.gamma * G\n",
     "            \n",
     "            # ココは効率の良い行動価値関数の更新の実装\n",
     "            # 行動価値関数は、当該状態毎、上・下・左・右のAction毎に価値がある。\n",
     "            # 確率分布が変化するため指数移動平均を用いる。\n",
-    "            self.Q[key] += (G - self.Q[key]) * self.alpha\n",
+    "            self.Q[key] = self.Q[key] + self.alpha * (G - self.Q[key])\n",
     "            \n",
     "            # 方策改善（方策は、状態毎、上・下・左・右の確率）にε-貪欲法（ε-greedy法）を採用。\n",
     "            self.pi[state] = greedy_probs(self.Q, state, self.epsilon)"
@@ -440,7 +441,7 @@
     "    state = env.reset()\n",
     "    agent.reset()\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -595,11 +596,11 @@
     "            # 方策評価\n",
     "            # ココがインクリメンタルな収益の計算\n",
     "            # rhoが追加されているのがポイント\n",
-    "            G = self.gamma * rho * G + reward\n",
+    "            G = reward + rho * self.gamma * G\n",
     "            \n",
     "            # ココは効率の良い行動価値関数の更新の実装\n",
     "            # 当該状態毎、上・下・左・右のAction毎に価値がある。\n",
-    "            self.Q[key] += (G - self.Q[key]) * self.alpha\n",
+    "            self.Q[key] = self.Q[key] + self.alpha * (G - self.Q[key])\n",
     "            \n",
     "            # 重点サンプリングのρ（重み）が計算されている。\n",
     "            rho *= self.pi[state][action] / self.b[state][action]\n",
@@ -636,7 +637,7 @@
     "    state = env.reset()\n",
     "    agent.reset()\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -731,8 +732,9 @@
     "        \n",
     "        # 方策評価\n",
     "        # ココが、= TD（時間差分学習）法の実装\n",
-    "        target = reward + self.gamma * next_V\n",
-    "        self.V[state] += (target - self.V[state]) * self.alpha"
+    "        #target = reward + self.gamma * next_V\n",
+    "        #self.V[state] += self.alpha * (target - self.V[state])\n",
+    "        self.V[state] = self.V[state] + self.alpha * ((reward + self.gamma * next_V) - self.V[state])"
    ]
   },
   {
@@ -761,7 +763,7 @@
     "    \n",
     "    state = env.reset() # 環境の初期化\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -834,8 +836,9 @@
     "            next_q_max = max(next_qs)\n",
     "\n",
     "        # ココがQ学習\n",
-    "        target = reward + self.gamma * next_q_max\n",
-    "        self.Q[state, action] += (target - self.Q[state, action]) * self.alpha"
+    "        #target = reward + self.gamma * next_q_max\n",
+    "        #self.Q[state, action] += self.alpha * (target - self.Q[state, action])\n",
+    "        self.Q[state, action] = self.Q[state, action] + self.alpha * ((reward + self.gamma * next_q_max) - self.Q[state, action])"
    ]
   },
   {
@@ -862,7 +865,7 @@
     "    \n",
     "    state = env.reset() # 環境の初期化\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -937,8 +940,9 @@
     "            next_q_max = max(next_qs)\n",
     "\n",
     "        # ココがQ学習\n",
-    "        target = reward + self.gamma * next_q_max\n",
-    "        self.Q[state, action] += (target - self.Q[state, action]) * self.alpha\n",
+    "        #target = reward + self.gamma * next_q_max\n",
+    "        #self.Q[state, action] += self.alpha * (target - self.Q[state, action])\n",
+    "        self.Q[state, action] = self.Q[state, action] + self.alpha * ((reward + self.gamma * next_q_max) - self.Q[state, action])\n",
     "\n",
     "        # 2つの方策を其々、別々に更新する\n",
     "        #self.pi[state] = greedy_probs(self.Q, state, epsilon=0) # 価値推定用の方策はgreedy\n",
@@ -969,7 +973,7 @@
     "    \n",
     "    state = env.reset() # 環境の初期化\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -1037,6 +1041,8 @@
     "\n",
     "    # 方策反復（ステップ毎）\n",
     "    def update(self, state, action, reward, done):\n",
+    "        \n",
+    "        # ステップの履歴を追加\n",
     "        self.memory.append((state, action, reward, done))\n",
     "        \n",
     "        # SARASなので2ステップ必要\n",
@@ -1049,8 +1055,10 @@
     "        next_q = 0 if done else self.Q[next_state, next_action]\n",
     "        \n",
     "        # ココがSARAS\n",
-    "        target = reward + self.gamma * next_q\n",
-    "        self.Q[state, action] += (target - self.Q[state, action]) * self.alpha\n",
+    "        #target = reward + self.gamma * next_q\n",
+    "        #self.Q[state, action] += (target - self.Q[state, action]) * self.alpha\n",
+    "        self.Q[state, action] = self.Q[state, action] + self.alpha * ((reward + self.gamma * next_q) - self.Q[state, action])\n",
+    "        \n",
     "        self.pi[state] = greedy_probs(self.Q, state, self.epsilon) # 直greedyでも良いのでは？"
    ]
   },
@@ -1080,7 +1088,7 @@
     "    state = env.reset()\n",
     "    agent.reset()\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -1150,6 +1158,8 @@
     "\n",
     "    # 方策反復（ステップ毎）\n",
     "    def update(self, state, action, reward, done):\n",
+    "        \n",
+    "        # ステップの履歴を追加\n",
     "        self.memory.append((state, action, reward, done))\n",
     "        \n",
     "        # SARASなので2ステップ必要\n",
@@ -1169,8 +1179,9 @@
     "            rho = self.pi[next_state][next_action] / self.b[next_state][next_action]\n",
     "        \n",
     "        # ココがSARAS（方策オフ）\n",
-    "        target = rho * (reward + self.gamma * next_q)\n",
-    "        self.Q[state, action] += (target - self.Q[state, action]) * self.alpha\n",
+    "        #target = rho * (reward + self.gamma * next_q)\n",
+    "        #self.Q[state, action] += (target - self.Q[state, action]) * self.alpha\n",
+    "        self.Q[state, action] = self.Q[state, action] + self.alpha * ((rho * (reward + self.gamma * next_q)) - self.Q[state, action])\n",
     "        \n",
     "        # 2つの方策を其々、別々に更新する\n",
     "        self.pi[state] = greedy_probs(self.Q, state, epsilon=0) # 価値推定用の方策はgreedy\n",
@@ -1203,7 +1214,7 @@
     "    state = env.reset()\n",
     "    agent.reset()\n",
     "\n",
-    "    # done=tureまで、\n",
+    "    # done=tureまでが1エピソード\n",
     "    while True:\n",
     "        \n",
     "        # ActionでStep\n",
@@ -1223,6 +1234,14 @@
     "\n",
     "env.render_q(agent.Q)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fffe13b-688c-475f-a452-a22f9da83ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
