--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -407,7 +407,9 @@
    "metadata": {},
    "source": [
     "#### [バンディット問題と動的計画法](PlaiceDRL1.ipynb)\n",
-    "#### [モンテカルロ法とTD法](PlaiceDRL2.ipynb)"
+    "#### [モンテカルロ法とTD法](PlaiceDRL2.ipynb)\n",
+    "#### [深層学習で強化学習（DQN）](PlaiceDRL3.ipynb)\n",
+    "#### [深層学習で方策勾配法](PlaiceDRL4.ipynb)"
    ]
   },
   {
@@ -589,6 +591,22 @@
    "metadata": {},
    "source": [
     "#### [深層学習についてのレポート（LLM編）](https://1drv.ms/p/s!Amfs5caPP9r5kAtLiKqOHge-zTzs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d7e627b-fc2e-4418-9668-d9c19e475f66",
+   "metadata": {},
+   "source": [
+    "#### [深層学習についてのレポート（画像系、CNN画像認識以外）](https://1drv.ms/p/s!Amfs5caPP9r5kB89Bt35mRcy_utY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68cf652-3d20-4c86-9a28-6f3536cff8a4",
+   "metadata": {},
+   "source": [
+    "#### [深層学習についてのレポート（強化学習、深層強化学習）](https://1drv.ms/p/s!Amfs5caPP9r5kDBBIzKQ-QAF1tWl)"
    ]
   },
   {
