--- a/Notebook/Jupyter/path/ScikitLearnTraining6.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining6.ipynb
@@ -10,6 +10,53 @@
     "## Kaggleチュートリアル 編 > タイタニック生存者予測\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
+    "- [環境準備](#環境準備)\n",
+    "  - [インポート](#インポート)\n",
+    "  - [プロキシ設定](#プロキシ設定)\n",
+    "  - [共通関数定義](#共通関数定義)\n",
+    "- [データの読込](#データの読込)\n",
+    "- [データの確認](#データの確認)\n",
+    "  - [概要確認](#概要確認)\n",
+    "    - [列名一覧](#列名一覧)\n",
+    "    - [変数説明](#変数説明)\n",
+    "    - [データの最初の数行を表示](#データの最初の数行を表示)\n",
+    "    - [データフレームの情報を表示](#データフレームの情報を表示)\n",
+    "    - [基本的な統計量を表示](#基本的な統計量を表示)\n",
+    "    - [各列の欠損値の数を表示](#各列の欠損値の数を表示)\n",
+    "    - [数値データの分布を確認](#数値データの分布を確認)\n",
+    "    - [カテゴリカル変数の可能性のある列](#カテゴリカル変数の可能性のある列)\n",
+    "    - [カテゴリカル変数の値のカウント](#カテゴリカル変数の値のカウント)\n",
+    "    - [Ticket、Cabinとはなにか？](#Ticket、Cabinとはなにか？)\n",
+    "      - [Ticket](#Ticket)\n",
+    "      - [Cabin](#Cabin)\n",
+    "  - [詳細確認](#詳細確認)\n",
+    "    - [カラーパレットの定義](#カラーパレットの定義)\n",
+    "    - [カテゴリカルデータの頻度分析](#カテゴリカルデータの頻度分析)\n",
+    "    - [相関行列をヒートマップで表示](#相関行列をヒートマップで表示)\n",
+    "    - [数値の説明変数と目的変数の関係の確認](#数値の説明変数と目的変数の関係の確認)\n",
+    "      - [Age](#Age)\n",
+    "      - [SibSp](#SibSp)\n",
+    "      - [Parch](#Parch)\n",
+    "      - [Fare](#Fare)\n",
+    "    - [カテゴリカル説明変数と目的変数の関係の確認](#カテゴリカル説明変数と目的変数の関係の確認)\n",
+    "    - [その他の説明変数と目的変数の関係の確認](#その他の説明変数と目的変数の関係の確認)\n",
+    "- [データの前処理](#データの前処理)\n",
+    "  - [特徴量エンジニアリング](#特徴量エンジニアリング)\n",
+    "    - [Deck](#Deck)\n",
+    "    - [FamilySize](#FamilySize)\n",
+    "    - [TicketGroupSize](#TicketGroupSize)\n",
+    "    - [Title](#Title)\n",
+    "  - [欠損値の処理とカテゴリカル変数のエンコーディング](#欠損値の処理とカテゴリカル変数のエンコーディング)\n",
+    "    - [Embarkedの欠損値処理](#Embarkedの欠損値処理)\n",
+    "    - [カテゴリカル変数のエンコーディング](#カテゴリカル変数のエンコーディング)\n",
+    "    - [Ageの欠損値処理](#Ageの欠損値処理)\n",
+    "  - [特徴量の選択](#特徴量の選択)\n",
+    "  - [最終結果の確認](#最終結果の確認)\n",
+    "- [学習と推定](#学習と推定)\n",
+    "  - [データ準備](#データ準備)\n",
+    "  - [学習](#学習)\n",
+    "  - [推定](#推定)\n",
+    "  - [評価](#評価)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -25,6 +72,14 @@
    },
    "source": [
     "## [環境準備](ScikitLearnTraining0.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45b30db5-b06a-47a4-ae49-cdf472e5e40a",
+   "metadata": {},
+   "source": [
+    "### インポート"
    ]
   },
   {
@@ -62,6 +117,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b1ffffb-05ed-4945-bdde-017be7e5d8d7",
+   "metadata": {},
+   "source": [
+    "### プロキシ設定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5649ae66-23cf-445d-8c98-98bcb6330ea7",
@@ -77,10 +140,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a12891ae-60ce-477c-b129-a88f4aea6072",
+   "metadata": {},
+   "source": [
+    "### 共通関数定義"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1f0a0fa-395d-424c-a5c8-5c189ca7468f",
    "metadata": {},
    "source": [
-    "## データの読み込み"
+    "## データの読込"
    ]
   },
   {
@@ -301,7 +372,7 @@
    "id": "8b44e4fd-7645-4268-8fa7-d3877adad7cc",
    "metadata": {},
    "source": [
-    "#### Ticket, Cabinとはなにか？"
+    "#### Ticket、Cabinとはなにか？"
    ]
   },
   {
@@ -309,7 +380,7 @@
    "id": "a9fc4504-5b17-49ab-aae8-414352d63749",
    "metadata": {},
    "source": [
-    "#### Ticket"
+    "##### Ticket"
    ]
   },
   {
@@ -343,7 +414,7 @@
    "id": "989dc54c-771e-43b8-8cbb-b9ca112a2866",
    "metadata": {},
    "source": [
-    "#### Cabin\n",
+    "##### Cabin\n",
     "先頭が一文字がデッキを表している模様。"
    ]
   },
@@ -709,7 +780,9 @@
   {
    "cell_type": "markdown",
    "id": "cf7dec36-2c99-4f59-904a-8e0adeaf8df9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### カテゴリカル説明変数と目的変数の関係の確認"
    ]
@@ -734,16 +807,8 @@
    "id": "ac13f762-fb00-4d70-a0c6-27fd7c71e549",
    "metadata": {},
    "source": [
-    "#### その他の説明変数と目的変数の関係の確認"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edbd42c8-c65c-4602-8caa-09934d485c52",
-   "metadata": {},
-   "source": [
-    "##### Cabin\n",
-    "先頭位置文字がデッキを表しているので、コレで分析してみる。"
+    "#### その他の説明変数と目的変数の関係の確認\n",
+    "Cabinの先頭位置文字がデッキを表しているので、コレで分析してみる。"
    ]
   },
   {
@@ -1106,7 +1171,7 @@
     "tags": []
    },
    "source": [
-    "### 必要な説明変数列を選択"
+    "### 特徴量の選択"
    ]
   },
   {
@@ -1134,7 +1199,7 @@
    "id": "b85957fe-ec58-41d7-88e9-16ff75c68037",
    "metadata": {},
    "source": [
-    "### 結果の確認"
+    "## 最終結果の確認"
    ]
   },
   {
@@ -1145,6 +1210,22 @@
    "outputs": [],
    "source": [
     "print(xy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ee646f-2954-45d1-9904-6976b655d88b",
+   "metadata": {},
+   "source": [
+    "## 学習と推定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b5df90e-e067-4209-a695-22e5dd3a7e33",
+   "metadata": {},
+   "source": [
+    "### データ準備"
    ]
   },
   {
@@ -1184,9 +1265,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd8892b8-3ab5-436a-8a13-e961f7ccef6f",
+   "metadata": {},
+   "source": [
+    "### 学習"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be0cb98-3332-4cd6-9703-ca57839cc772",
+   "id": "a06702ca-bc9a-48d2-b724-5d4df391e626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,12 +1286,42 @@
     "# 勾配ブースティングモデルの定義と訓練\n",
     "model = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# 予測\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# モデルの評価\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6edcfcda-788a-4a0d-93c0-5ee11d6a6198",
+   "metadata": {},
+   "source": [
+    "### 推定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e14a85d-d5ec-419d-ae80-af335b6cdb0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67d4a9ee-171a-4a91-bc98-33dc05f154e7",
+   "metadata": {},
+   "source": [
+    "### 評価"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be0cb98-3332-4cd6-9703-ca57839cc772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "class_report = classification_report(y_test, y_pred)\n",
@@ -1213,14 +1332,6 @@
     "print('Classification Report:')\n",
     "print(class_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7232c5a-ab06-4782-982a-47ed579a9e77",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
