--- a/Notebook/Jupyter/path/PlaiceDRL2.ipynb
+++ b/Notebook/Jupyter/path/PlaiceDRL2.ipynb
@@ -18,36 +18,36 @@
     "  - [共通関数](#共通関数)\n",
     "- [モンテカルロ法](#モンテカルロ法)\n",
     "  - [サンプルモデルで期待値を計算](#サンプルモデルで期待値を計算)\n",
-    "  - [モンテカルロ法の方策反復法](#モンテカルロ法の方策反復法)\n",
-    "    - [状態価値関数を使った方策反復法A](#状態価値関数を使った方策反復法A)\n",
+    "  - [モンテカルロ法のGPI](#モンテカルロ法のGPI)\n",
+    "    - [状態価値関数を使ったGPI_A](#状態価値関数を使ったGPI_A)\n",
     "      - [エージェント実装A](#エージェント実装A)\n",
     "      - [グリッド・ワールド上でエージェントを実行A](#グリッド・ワールド上でエージェントを実行A)\n",
-    "    - [行動価値関数を使った方策反復法B](#行動価値関数を使った方策反復法B)\n",
+    "    - [行動価値関数を使ったGPI_B](#行動価値関数を使ったGPI_B)\n",
     "      - [エージェントの実装B](#エージェントの実装B)\n",
     "      - [グリッド・ワールド上でエージェントを実行B](#グリッド・ワールド上でエージェントを実行B)\n",
     "- [方策オフのモンテカルロ法](#方策オフのモンテカルロ法)\n",
     "  - [重点サンプリング](#重点サンプリング)\n",
-    "  - [方策オフのモンテカルロ法の方策反復法](#方策オフのモンテカルロ法の方策反復法)\n",
-    "    - [状態価値関数を使った方策反復法C](#状態価値関数を使った方策反復法C)\n",
-    "    - [行動価値関数を使った方策反復法D](#行動価値関数を使った方策反復法D)\n",
+    "  - [方策オフのモンテカルロ法のGPI](#方策オフのモンテカルロ法のGPI)\n",
+    "    - [状態価値関数を使ったGPI_C](#状態価値関数を使ったGPI_C)\n",
+    "    - [行動価値関数を使ったGPI_D](#行動価値関数を使ったGPI_D)\n",
     "      - [エージェント実装D](#エージェント実装D)\n",
     "      - [グリッド・ワールド上でエージェントを実行D](#グリッド・ワールド上でエージェントを実行D)\n",
     "- [TD法（時間的差分学習法）](#TD法（時間的差分学習法）)\n",
     "  - [...](#...)\n",
-    "  - [TD法の方策反復法](#TD法の方策反復法)\n",
-    "    - [状態価値関数を使った方策反復法E](#状態価値関数を使った方策反復法E)\n",
+    "  - [TD法のGPI](#TD法のGPI)\n",
+    "    - [状態価値関数を使ったGPI_E](#状態価値関数を使ったGPI_E)\n",
     "      - [エージェント実装E](#エージェント実装E)\n",
     "      - [グリッド・ワールド上でエージェントを実行E](#グリッド・ワールド上でエージェントを実行E)\n",
-    "    - [行動価値関数を使った方策反復法(Q学習)F](#行動価値関数を使った方策反復法(Q学習)F)\n",
+    "    - [行動価値関数を使ったGPI(Q学習)F](#行動価値関数を使ったGPI(Q学習)F)\n",
     "      - [エージェント実装F](#エージェント実装F)\n",
     "      - [グリッド・ワールド上でエージェントを実行F](#グリッド・ワールド上でエージェントを実行F)\n",
-    "    - [行動価値関数を使った方策反復法(方策オフQ学習)G](#行動価値関数を使った方策反復法(方策オフQ学習)G)\n",
+    "    - [行動価値関数を使ったGPI(方策オフQ学習)G](#行動価値関数を使ったGPI(方策オフQ学習)G)\n",
     "      - [エージェント実装G](#エージェント実装G)\n",
     "      - [グリッド・ワールド上でエージェントを実行G](#グリッド・ワールド上でエージェントを実行G)\n",
-    "    - [行動価値関数を使った方策反復法(SARSA)H](#行動価値関数を使った方策反復法(SARSA)H)\n",
+    "    - [行動価値関数を使ったGPI(SARSA)H](#行動価値関数を使ったGPI(SARSA)H)\n",
     "      - [エージェント実装H](#エージェント実装H)\n",
     "      - [グリッド・ワールド上でエージェントを実行H](#グリッド・ワールド上でエージェントを実行H)\n",
-    "    - [行動価値関数を使った方策反復法(方策オフのSARSA)I](#行動価値関数を使った方策反復法(方策オフのSARSA)I)\n",
+    "    - [行動価値関数を使ったGPI(方策オフのSARSA)I](#行動価値関数を使ったGPI(方策オフのSARSA)I)\n",
     "      - [エージェント実装I](#エージェント実装I)\n",
     "      - [グリッド・ワールド上でエージェントを実行I](#グリッド・ワールド上でエージェントを実行I)\n",
     "      \n",
@@ -211,8 +211,8 @@
    "id": "5766c5fe-7e6c-45b0-abe1-6b6238dfe1f4",
    "metadata": {},
    "source": [
-    "### モンテカルロ法の方策反復法\n",
-    "モンテカルロ法の方策反復法では、状態価値関数か行動価値関数のどちらか一方を使用する。"
+    "### モンテカルロ法のGPI\n",
+    "モンテカルロ法のGPIでは、状態価値関数か行動価値関数のどちらか一方を使用する。"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "id": "53c9ca6f-5ffd-49a3-b2be-7a89d886b00c",
    "metadata": {},
    "source": [
-    "#### 状態価値関数を使った方策反復法A"
+    "#### 状態価値関数を使ったGPI_A"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "id": "b59fbd21-29dc-4741-8eac-0ab11fea3f58",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法B"
+    "#### 行動価値関数を使ったGPI_B"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "id": "e24c28f8-ebdc-442c-9271-0c87da4210ca",
    "metadata": {},
    "source": [
-    "### 方策オフのモンテカルロ法の方策反復法\n",
+    "### 方策オフのモンテカルロ法のGPI\n",
     "- モチベーション：行動の選択は、探索と適用のバランスを取りたいが、行動価値関数の評価には適用のみを行いたい。\n",
     "- 別のサイトでは、前半を貪欲法（greedy法）、後半の学習利用をε-貪欲法（ε-greedy法）と言う方法も提案されていた。"
    ]
@@ -527,9 +527,9 @@
    "id": "50f15100-1dee-4101-980b-1628921cff04",
    "metadata": {},
    "source": [
-    "#### 状態価値関数を使った方策反復法C\n",
+    "#### 状態価値関数を使ったGPI_C\n",
     "- モンテカルロ法は、状態価値関数・行動価値関数のいずれかを利用なので\n",
-    "- 方策オフのモンテカルロ法の方策反復法には状態価値関数版は無い。"
+    "- 方策オフのモンテカルロ法のGPIには状態価値関数版は無い。"
    ]
   },
   {
@@ -537,7 +537,7 @@
    "id": "f3156498-7ad0-4f75-854e-bed2011f5eeb",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法D"
+    "#### 行動価値関数を使ったGPI_D"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "id": "128c35af-7b62-4e77-97f9-15a0311cf2bc",
    "metadata": {},
    "source": [
-    "### TD法の方策反復法"
+    "### TD法のGPI"
    ]
   },
   {
@@ -687,8 +687,8 @@
    "id": "9cbba340-f2ba-4994-a5a0-5d93b6a0e2d9",
    "metadata": {},
    "source": [
-    "#### 状態価値関数を使った方策反復法E\n",
-    "[状態価値関数を使った方策反復法A](#状態価値関数を使った方策反復法A)と比較すると良い。"
+    "#### 状態価値関数を使ったGPI_E\n",
+    "[状態価値関数を使ったGPI_A](#状態価値関数を使ったGPI_A)と比較すると良い。"
    ]
   },
   {
@@ -788,8 +788,8 @@
    "id": "a3143d87-cf2c-4af5-aa89-bb9ca7c6f3c5",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法(Q学習)F\n",
-    "- [行動価値関数を使った方策反復法B](#行動価値関数を使った方策反復法B)と比較すると良いが、かなり実装が違うので解り難い。\n",
+    "#### 行動価値関数を使ったGPI(Q学習)F\n",
+    "- [行動価値関数を使ったGPI_B](#行動価値関数を使ったGPI_B)と比較すると良いが、かなり実装が違うので解り難い。\n",
     "- 以降の順番は、Q、Q（方策オフ）、SARSA、SARSA（方策オフ）に変更。\n",
     "- 歴史的にQ → SARSAと登場、Qは方策オフが標準、SARSAは方策オンが標準"
    ]
@@ -890,7 +890,7 @@
    "id": "e665e8b6-3aa8-467a-b162-aa477fd6685c",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法(方策オフQ学習)G\n",
+    "#### 行動価値関数を使ったGPI(方策オフQ学習)G\n",
     "- Qは方策オフが標準で重点サンプリングを必要としない。\n",
     "- 理由は行動価値関数の推定を方策に依存しないgreedyで行うので。"
    ]
@@ -998,7 +998,7 @@
    "id": "1442f960-d218-43d1-b92d-99ac0aeac2d0",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法(SARSA)H\n",
+    "#### 行動価値関数を使ったGPI(SARSA)H\n",
     "SARSAは方策オンが標準"
    ]
   },
@@ -1114,7 +1114,7 @@
    "id": "9e8d5695-2733-4c65-9705-2dfdb4aa5d76",
    "metadata": {},
    "source": [
-    "#### 行動価値関数を使った方策反復法(方策オフのSARSA)I\n",
+    "#### 行動価値関数を使ったGPI(方策オフのSARSA)I\n",
     "方策オフのSARSAでは重点サンプリングが必要になる。"
    ]
   },
@@ -1234,14 +1234,6 @@
     "\n",
     "env.render_q(agent.Q)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fffe13b-688c-475f-a452-a22f9da83ec5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
