--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -503,6 +503,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "056cbb09-065f-4f93-a8e2-4ec3c3eb08aa",
+   "metadata": {},
+   "source": [
+    "## LLM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431d38ad-1915-4520-8823-3a2e94b6bb88",
+   "metadata": {},
+   "source": [
+    "### [LLM_Ollama](LLM_Ollama.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9e4cb29-b0dc-4120-b8b7-f9a0b6303463",
    "metadata": {},
    "source": [
@@ -512,7 +528,9 @@
   {
    "cell_type": "markdown",
    "id": "55531896-a69e-4927-b5c1-b147c86a3947",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Apache Spark"
    ]
