--- a/Notebook/Jupyter/path/TensorFlowAndKeras1.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras1.ipynb
@@ -71,8 +71,7 @@
     "# モデル定義\n",
     "from keras.models import Model, Sequential, model_from_json, load_model\n",
     "from keras.layers import Dense, Input, Activation, Flatten, Dropout, LSTM\n",
-    "from keras.layers import Conv2D\n",
-    "from keras.layers import MaxPool2D\n",
+    "from keras.layers import Conv2D, MaxPool2D\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from keras import optimizers\n",
     "from keras.optimizers import SGD, Adam\n",
