--- a/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras2.ipynb
@@ -70,15 +70,13 @@
     "# モデル定義\n",
     "from keras.models import Model, Sequential, model_from_json, load_model\n",
     "from keras.layers import Dense, Input, Activation, Flatten, Dropout, LSTM\n",
-    "from keras.layers.convolutional import Conv2D\n",
-    "from keras.layers.pooling import MaxPool2D\n",
+    "from keras.layers import Conv2D, MaxPool2D\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from keras import optimizers\n",
     "from keras.optimizers import SGD, Adam\n",
     "# その他\n",
     "from keras.applications.vgg16 import VGG16\n",
-    "from keras.utils import to_categorical\n",
-    "from keras.utils import np_utils\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
