--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -513,7 +513,9 @@
    "id": "431d38ad-1915-4520-8823-3a2e94b6bb88",
    "metadata": {},
    "source": [
-    "### [LLM_Ollama](LLM_Ollama.ipynb)"
+    "### [LLM_Ollama](LLM_Ollama.ipynb)\n",
+    "### [LLM_LlamaIndex](LLM_LlamaIndex.ipynb)\n",
+    "### [LLM_Fine-tuning](LLM_Fine-tuning.ipynb)"
    ]
   },
   {
