--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -215,12 +215,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94f5e43f-8649-4e83-8c74-57eba0dc085a",
+   "metadata": {},
+   "source": [
+    "### o'reilly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "880d18b3-891a-40a5-89f5-7fbd0c152b7b",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### o'reillyのカサゴ深層学習の本"
+    "#### カサゴ深層学習の本"
    ]
   },
   {
@@ -228,7 +236,7 @@
    "id": "04ffd758-6bed-4d99-9d10-fab03387e10d",
    "metadata": {},
    "source": [
-    "#### ニューラルネットワーク"
+    "##### ニューラルネットワーク（DNN）"
    ]
   },
   {
@@ -236,22 +244,19 @@
    "id": "4421ee58-1d5a-4e71-8c5d-82efbc4ece43",
    "metadata": {},
    "source": [
-    "##### [構成要素](KasagoDL1.ipynb)\n",
+    "###### [構成要素](KasagoDL1.ipynb)\n",
     "パーセプトロンと活性化関数"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3a2d16a8-ccc1-49b8-bfc8-ce63fe00fb2a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "##### [MINST推論と学習](KasagoDL2.ipynb)\n",
-    "（ディープ）ニューラルネットワークでMINSTの画像認識の\n",
-    "\n",
-    "- 調整済みの重みを使用した推論と\n",
-    "- 数値微分＋勾配降下法による学習を\n",
-    "\n",
-    "行う。"
+    "###### [MINST推論と学習](KasagoDL2.ipynb)\n",
+    "（ディープ）ニューラルネットワークの推論と学習の初歩。"
    ]
   },
   {
@@ -259,8 +264,8 @@
    "id": "25a4c052-7ac7-46b4-823d-456049d2dfb6",
    "metadata": {},
    "source": [
-    "##### [MINST学習（誤差逆伝播）](KasagoDL3.ipynb)\n",
-    "（ディープ）ニューラルネットワークでMINSTの画像認識の学習を、誤差逆伝播（バックプロパゲーション）で行う。"
+    "###### [MINST学習（誤差逆伝播）](KasagoDL3.ipynb)\n",
+    "（ディープ）ニューラルネットワークの学習を、誤差逆伝播（バックプロパゲーション）で行う。"
    ]
   },
   {
@@ -268,7 +273,7 @@
    "id": "f7ecc77b-c775-4022-8ed2-dd26e2e7d778",
    "metadata": {},
    "source": [
-    "##### [オプション](KasagoDL4.ipynb)\n",
+    "###### [オプション](KasagoDL4.ipynb)\n",
     "（ディープ）ニューラルネットワークの学習に関する様々なオプション。"
    ]
   },
@@ -277,7 +282,7 @@
    "id": "c3b7832d-019f-4711-9f91-10c75b248bb5",
    "metadata": {},
    "source": [
-    "#### 畳込ニューラルネットワーク（CNN）"
+    "##### 畳込ニューラルネットワーク（CNN）"
    ]
   },
   {
@@ -285,7 +290,7 @@
    "id": "5d2709eb-1702-488a-88b9-f4954dd7bb5b",
    "metadata": {},
    "source": [
-    "##### [単純なCNN](KasagoCNN1.ipynb)"
+    "###### [単純なCNN](KasagoCNN1.ipynb)"
    ]
   },
   {
@@ -295,7 +300,7 @@
     "tags": []
    },
    "source": [
-    "##### [深層のCNN](KasagoCNN2.ipynb)"
+    "###### [深層のCNN](KasagoCNN2.ipynb)"
    ]
   },
   {
@@ -305,18 +310,33 @@
     "tags": []
    },
    "source": [
-    "### o'reillyのネゴザメ言語モデルの本"
+    "#### ネゴザメ言語モデルの本"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1bd816be-acd8-4cc3-a738-787145bc2e5b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "#### [復習](NekozameDL1.ipynb)"
+    "##### [復習](NekozameDL1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28668e48-3e67-4531-83e7-3b6e8575e85a",
+   "metadata": {},
+   "source": [
+    "###### 順伝播のみの二層ネットワーク"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17a08947-f2f4-492a-9bf9-901883d8b5a2",
+   "metadata": {},
+   "source": [
+    "###### 逆伝播を含む二層ネットワーク"
    ]
   },
   {
@@ -326,7 +346,7 @@
     "tags": []
    },
    "source": [
-    "#### ベクトル化"
+    "##### ベクトル化"
    ]
   },
   {
@@ -334,7 +354,7 @@
    "id": "72816432-63eb-420b-ae5a-a74b1537f192",
    "metadata": {},
    "source": [
-    "##### [カウントベースの手法](NekozameVector1.ipynb)"
+    "###### [カウントベースの手法](NekozameVector1.ipynb)"
    ]
   },
   {
@@ -342,7 +362,7 @@
    "id": "3f386189-63d7-45e5-a40b-5060c959636c",
    "metadata": {},
    "source": [
-    "##### [推論ベースの手法](NekozameVector2.ipynb)"
+    "###### [推論ベースの手法](NekozameVector2.ipynb)"
    ]
   },
   {
@@ -350,7 +370,7 @@
    "id": "94620300-ce1a-4ff8-83fb-da357d0c9704",
    "metadata": {},
    "source": [
-    "##### [推論ベース手法の高速化](NekozameVector3.ipynb)"
+    "###### [推論ベース手法の高速化](NekozameVector3.ipynb)"
    ]
   },
   {
@@ -358,7 +378,7 @@
    "id": "b6b33d35-b422-4b11-bb67-d7fd9a811284",
    "metadata": {},
    "source": [
-    "#### RNN"
+    "##### RNN"
    ]
   },
   {
@@ -366,7 +386,7 @@
    "id": "faee766e-86d1-46b7-8f9e-5fcd548a1574",
    "metadata": {},
    "source": [
-    "##### [RNN](NekozameRNN1.ipynb)"
+    "###### [RNN](NekozameRNN1.ipynb)"
    ]
   },
   {
@@ -374,7 +394,7 @@
    "id": "39010b60-caeb-4c94-9906-96acb616fc78",
    "metadata": {},
    "source": [
-    "##### [LSTM](NekozameRNN2.ipynb)"
+    "###### [LSTM](NekozameRNN2.ipynb)"
    ]
   },
   {
@@ -382,7 +402,7 @@
    "id": "4ab00f3c-5cbe-465b-8662-be78aba244b6",
    "metadata": {},
    "source": [
-    "##### [RNNEncDec](NekozameRNN3.ipynb)"
+    "###### [RNNEncDec](NekozameRNN3.ipynb)"
    ]
   },
   {
@@ -390,7 +410,7 @@
    "id": "1661d21e-a8e6-46ad-886d-1359f41a9c6b",
    "metadata": {},
    "source": [
-    "##### [RNNSearch](NekozameRNN4.ipynb)"
+    "###### [RNNSearch](NekozameRNN4.ipynb)"
    ]
   },
   {
@@ -398,18 +418,41 @@
    "id": "8d5bf09f-ebcb-4953-96a1-b50980b89c9a",
    "metadata": {},
    "source": [
-    "### o'reillyのツノガレイ強化学習の本"
+    "#### ツノガレイ強化学習の本"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "9e495383-1375-4e34-bd21-17cbfba24b30",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "##### [バンディット問題と動的計画法](PlaiceDRL1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56587bbf-e55d-4784-87d4-818b84accb67",
    "metadata": {},
    "source": [
-    "#### [バンディット問題と動的計画法](PlaiceDRL1.ipynb)\n",
-    "#### [モンテカルロ法とTD法](PlaiceDRL2.ipynb)\n",
-    "#### [深層学習で強化学習（DQN）](PlaiceDRL3.ipynb)\n",
-    "#### [深層学習で方策勾配法](PlaiceDRL4.ipynb)"
+    "##### [モンテカルロ法とTD法](PlaiceDRL2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0cc15d-1b62-475c-bad0-cfa46127b55f",
+   "metadata": {},
+   "source": [
+    "##### [深層学習で強化学習（DQN）](PlaiceDRL3.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cb8ab51-bbc4-452c-99c6-c7ede37f3a98",
+   "metadata": {},
+   "source": [
+    "##### [深層学習で方策勾配法](PlaiceDRL4.ipynb)"
    ]
   },
   {
@@ -451,11 +494,39 @@
    "id": "039bdbee-4651-483c-bf30-9a0ea0cbfcdd",
    "metadata": {},
    "source": [
-    "#### CNN\n",
-    "- [初歩的なCNN](TensorFlowAndKeras3.ipynb)\n",
-    "- [ちょっと高度なCNN](TensorFlowAndKeras4.ipynb)\n",
-    "- [画像の前処理](TensorFlowAndKeras5.ipynb)\n",
-    "- [初歩編＋転移学習・ファインチューニング](TensorFlowAndKeras6.ipynb)"
+    "#### CNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159c6fef-a57e-424a-a1a4-cdc805d4c473",
+   "metadata": {},
+   "source": [
+    "##### [初歩的なCNN](TensorFlowAndKeras3.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab795a50-c4f7-4cf9-b77f-f87a7648b385",
+   "metadata": {},
+   "source": [
+    "##### [ちょっと高度なCNN](TensorFlowAndKeras4.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9250f8-905e-4ae4-be33-ec91190ceb83",
+   "metadata": {},
+   "source": [
+    "##### [画像の前処理](TensorFlowAndKeras5.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2777d41c-8662-4e6c-aaaf-9b8b57e16660",
+   "metadata": {},
+   "source": [
+    "##### [初歩編＋転移学習・ファインチューニング](TensorFlowAndKeras6.ipynb)"
    ]
   },
   {
@@ -505,7 +576,7 @@
    "id": "056cbb09-065f-4f93-a8e2-4ec3c3eb08aa",
    "metadata": {},
    "source": [
-    "## LLM"
+    "## LLM（大規模言語モデル）"
    ]
   },
   {
@@ -513,8 +584,30 @@
    "id": "431d38ad-1915-4520-8823-3a2e94b6bb88",
    "metadata": {},
    "source": [
-    "### [LLM_Ollama](LLM_Ollama.ipynb)\n",
-    "### [LLM_LlamaIndex](LLM_LlamaIndex.ipynb)\n",
+    "### [LLM_Ollama](LLM_Ollama.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c10ed3fa-a1c5-405f-b2c5-788e61dd764e",
+   "metadata": {},
+   "source": [
+    "### [LLM_LlamaIndex1](LLM_LlamaIndex1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7694bba-bcd7-420c-ab00-16d569ad1d66",
+   "metadata": {},
+   "source": [
+    "### [LLM_LlamaIndex2](LLM_LlamaIndex2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6382fe89-0d5d-41d8-afbb-154267510baa",
+   "metadata": {},
+   "source": [
     "### [LLM_Fine-tuning](LLM_Fine-tuning.ipynb)"
    ]
   },
@@ -651,7 +744,7 @@
    "id": "4ca34653-0ada-457d-a59d-d9047ce29730",
    "metadata": {},
    "source": [
-    "#### [リサーチをサポートするAI活用のAS-ISとTO-BE]()"
+    "#### [リサーチをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kB29-FBGDhVDl0RR)"
    ]
   }
  ],
@@ -671,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
